# pruvendo-flex-contract

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  _CoqProject  dune-project  pruvendo-flex-contract.opam  pruvendo.recompile  tvmNotations.v
_ref/: 1
_ref/01nov2021/flex/: Price.cpp
_ref/01nov2021/tokens-fungible/: README.md  RootTokenContract.cpp  TONTokenWallet.cpp
_ref/12july2021/: flex12072021.cpp  structures.lang
_ref/20210519/: FLeX.cpp  FLeXClient.cpp  FLeXDebot.cpp  FLeXDebot.tvc  Price.hpp  PriceXchg.hpp  freetr.pro  freetr_debot.cpp  freetr_debot.tvc  tip3info.tvc
_ref/__old/20210514/: a.abi  (+12 more)
_src06052011/: .makefile.d  FleXConsts.v  FleXFuncVariabless.v  FleXFuncs.v  FleXSpec.v  dune  flexClass.v  flexTypes.v  makefile  makefile.conf
_unused/: CommonTypesNotations.v
src/: FLeXClass.v  FLeXClassSelf.v  FLeXClientClass.v  FLeXClientFuncs.v  FLeXClientFuncsNotations.v  FLeXClientSpecs.v  FLeXConstSig.v  FLeXContractTypes.v  FLeXFunc.v  FLeXFuncNotations.v  FLeXFuncSelf.v  FLeXFuncs.v  FLeXFuncsNotations.v  FLeXSpecSelf.v  FLeXSpecs.v  FleXClass.v  FleXConsts.v  FleXFuncNotations.v  PriceClass.v  PriceFuncs.v  PriceFuncsNotations.v  PriceSpecs.v  PriceXchgClass.v  classFlex.v  classFlex1.v  dune  specFlex.v  stdFunc.v  stdFuncNotations.v
src/Project/: CommonAxioms.v  CommonConstSig.v  CommonNotations.v  CommonTypes.v  CommonTypesProofs.v
src/_unused/: FlexClientclass.v  Flexclass.v  PriceXclass.v  Priceclass.v  _classFlex.v  classFLeX.v  classFLexClient.v  classFlex1.v  classPrice.v  classPriceXchg.v  tmpCLASS.v  trainFuncExamplesForFLeX.v
(+449 files in other folders)
