synopsis:     "Pruvendo FleX FreeTON contract verificaton"
description:  "Pruvendo FleX FreeTON contract verificaton"
name:         "pruvendo-flex-contract"
opam-version: "2.0"
maintainer:   "team@pruvendo.com"
authors:      "Pruvendo Team"
homepage:     "git://git@vcs.modus-ponens.com:ton/flex-contract.git"
dev-repo:     "git+https://github.com/Pruvendo/opam-repo.git"
bug-reports:  "git://git@vcs.modus-ponens.com:ton/flex-contract.git"
doc:          "https://pruvendo.github.io/pruvendo-flex-contract"

license:      "GPL 3"

depends: [
  "coq"           { >= "8.11.0" }
  "dune"          { >= "2.8.0"  }
  "pruvendo-base" { >= "0.2.0" }
  "pruvendo-base-lib" { >= "0.1.0" }
  "pruvendo-umlang" 
  "ursus-standard-library"
]

pin-depends: [
  [ "pruvendo-base.latest-git" "../coq-finproof-base#dune-test" ]
  [ "pruvendo-base-lib.latest-git" "../pruvendo-base-lib#master" ]
  [ "pruvendo-umlang.latest-git" "../solidity-monadic-language#dune-test" ]
  [ "ursus-standard-library.latest-git" "../ursus-standard-library#master" ]    
]

build: [ "dune" "build" "-p" name "-j" jobs ]
